name:                ln-sanitize
version:             0.1.0.4
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-sanitize#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.Sanitize
                     , LN.Sanitize.Internal
                     , LN.Sanitize.User
                     , LN.Sanitize.Organization
                     , LN.Sanitize.Forum
                     , LN.Sanitize.Board
                     , LN.Sanitize.Thread
                     , LN.Sanitize.ThreadPost
  build-depends:       base >= 4.7 && < 5
                     , text
                     , haskell-ln-types
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite ln-sanitize-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LN.Sanitize.InternalSpec
                     , LN.Sanitize.UserSpec
  build-depends:       base
                     , hspec
                     , ln-sanitize
                     , haskell-ln-types
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-sanitize
